# simintero

./: .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  CLAUDE.md  CONVERGENCE.md  Makefile  README.md  auditfull06162026.md  auditfull06192026.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  roadmap06192026.md  tsconfig.base.json  turbo.json
contracts/: MIGRATION-envelope.md  README-python.md  index.ts  package.json  pyproject.toml  test_python_package.py
contracts/asyncapi/: c3-event-catalog.yaml
contracts/codegen/: JavaCompileCheck.md  generate.py  test_envelope_name.py  test_python_roundtrip.py
contracts/codegen/fixtures/: case.json
contracts/codegen/templates/: java_record.jinja2
contracts/conformance/: README.md
contracts/fhir/: ig-lock.json
contracts/java-canonical/: build.gradle.kts  settings.gradle.kts
contracts/openapi/: c1-digicore-runtime.yaml  c2-revital-advisory.yaml  platform-control-plane.yaml  platform-model-gateway.yaml  platform-vkas.yaml
contracts/schemas/: advisory-output.schema.json  clock-profile.schema.json  event-envelope.schema.json  trace.schema.json  workflow-definition.schema.json
contracts/schemas/canonical/: case.json  common.json  coverage.json  decision.json  member.json  provider.json  service_line.json
contracts/schemas/envelope/: event-envelope.schema.json
contracts/schemas/events/: case-intake-received.json  case-state-changed.json  decision-recorded.json
contracts/scripts/: check-breaking-changes.js  generate.mjs
contracts/test/: asyncapi-refs.test.mjs  asyncapi.test.mjs  breaking-changes.test.mjs  envelope.test.mjs  event-payloads.test.mjs  schema-validity.test.mjs
contracts/test/fixtures/: envelope.enstellar-shape.json  envelope.valid.json  payload.case-state-changed.json
platform/conformance-kit/: pyproject.toml
platform/conformance-kit/simintero_conformance/: __init__.py  checks.py
platform/conformance-kit/tests/: test_kit_selfcheck.py
platform/libs/authz-client/py/: pyproject.toml
platform/libs/outbox/py/: pyproject.toml
platform/libs/tenant-context/py/: pyproject.toml
services/enstellar-agent-layer/: Dockerfile  pyproject.toml
services/enstellar-agent-layer/enstellar_agents/: config.py  main.py  models.py
services/enstellar-agent-layer/enstellar_agents/agents/: completeness.py  triage.py
services/enstellar-agent-layer/enstellar_agents/guardrails/: __init__.py  engine.py  rules.py
services/enstellar-agent-layer/enstellar_agents/model_access/: __init__.py  anthropic_adapter.py  base.py  factory.py  ollama_adapter.py
services/enstellar-agent-layer/enstellar_agents/routers/: assist.py
services/enstellar-agent-layer/evals/: report.py  runner.py  test_completeness_eval.py  test_dataset.py  test_metrics.py  test_runner.py
services/enstellar-agent-layer/evals/dataset/: base.py  file_loader.py  synthetic.py
services/enstellar-agent-layer/evals/metrics/: completeness.py  guardrails.py  triage.py
services/enstellar-agent-layer/tests/: conftest.py  test_adapters.py  test_assist_router.py  test_completeness_agent.py  test_guardrails.py  test_main.py  test_models.py  test_triage_agent.py
services/enstellar-connectors/: pyproject.toml
services/enstellar-connectors/enstellar_connectors/: __init__.py  circuit_breaker.py  config.py
services/enstellar-connectors/tests/: conftest.py  test_client_c2.py  test_digicore_client.py  test_digicore_models.py  test_phi_minimizer.py  test_revital_client.py  test_revital_models.py
services/enstellar-packages/authz/: pyproject.toml
services/enstellar-packages/canonical-model/: build.gradle.kts  package-lock.json  package.json  pyproject.toml  required-elements.json  settings.gradle.kts  tsconfig.json
services/enstellar-packages/event-contracts/: asyncapi.yaml  pyproject.toml
services/enstellar-poller/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/enstellar-poller/enstellar_poller/: __init__.py  main.py
services/enstellar-poller/tests/: test_health.py
services/enstellar-portal-bff/: .dockerignore  Dockerfile  pyproject.toml
services/enstellar-portal-bff/enstellar_bff/: auth.py  config.py  main.py  models.py
services/enstellar-portal-bff/tests/: conftest.py  test_admin_dlq.py  test_adverse_decision.py  test_adverse_structured.py  test_appeals_proxy.py  test_auth.py  test_cases.py  test_clinician_id_validation.py  test_crd.py  test_criteria.py  test_dashboard.py  test_directory_proxy.py  test_documents.py  test_dtr.py  test_grievances_proxy.py  test_health.py  test_models.py  test_otel_middleware.py  test_queue_stats.py  test_rfi.py  test_suggestions.py  test_upstream_error_propagation.py  test_workbench.py  test_worklist.py
services/enstellar-workflow/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/enstellar-workflow/enstellar_workflow/: __init__.py  auth.py  config.py  main.py
services/enstellar-workflow/migrations/: env.py
services/enstellar-workflow/tests/: conftest.py  test_adverse_invariant.py  test_adverse_payload.py  test_auth_audience.py  test_auth_reviewer.py  test_auto_determination.py  test_auto_determination_integration.py  test_case_service.py  test_cases_api.py  test_cases_clock_lob.py  test_clinical_review_consumer.py  test_clocks.py  test_completeness_gating_loop.py  test_config_service.py  test_consumer_idempotent.py  test_consumer_rls.py  test_criteria_api.py  test_dashboard_router.py  test_decision_audit_log.py  test_decision_recorder.py  test_determination_notice_e2e.py  test_dlq_admin.py  test_envelope_contract.py  test_escalation.py  test_escalation_api.py  test_fabric_writer.py  test_grievance_sla.py  test_grievance_sla_medicaid.py  test_guards.py  test_health_readiness.py  test_input_limits.py  test_intake_consumer_wired.py  test_intake_kickoff.py  test_normalization_mapper.py  test_normalization_storage.py  test_normalize_fabric_bridge.py  test_notice_params.py  test_notification_seed_migration.py  test_opa_adverse_gate.py  test_otel_middleware.py  (+27 more)
(+1601 files in other folders)
