[project]
name = "simintero-contracts"
version = "1.0.0"
description = "Simintero canonical model + event envelope — generated Pydantic v2 types"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9"]

[tool.hatch.build.targets.wheel]
packages = ["generated/python/canonical_model"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
