[project]
name = "simintero-conformance"
version = "1.0.0"
description = "Reusable platform conformance checks: RLS leak probe, envelope validation, guard non-bypass"
requires-python = ">=3.12"
dependencies = ["asyncpg>=0.29", "simintero-contracts"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "testcontainers[postgres]>=4.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simintero_conformance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
