[project]
name = "enstellar-connectors"
version = "0.1.0"
description = "Enstellar integration connectors — Digicore, Revital, terminology clients"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests requiring a live external service (Digicore or Revital); deselect with '-m not integration'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enstellar_connectors"]

[tool.ruff]
line-length = 100
target-version = "py312"
