[project]
name = "enstellar-workflow"
version = "0.1.0"
description = "Enstellar workflow engine — deterministic case state machine"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "aiokafka>=0.11",
    "pydantic>=2.9",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "simintero-contracts",
    "simintero-outbox",
    "simintero-tenant-context",
    "simintero-authz",
    "enstellar-connectors",
    "minio>=7.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # Sync DBAPI for Alembic migrations (run at container start via docker-entrypoint.sh);
    # the app itself uses asyncpg. Must be a runtime dep so the --no-dev image includes it.
    "psycopg2-binary>=2.9",
    # OpenTelemetry instrumentation
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.7",
    "testcontainers[kafka]>=4.7",
    "testcontainers[minio]>=4.7",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "respx>=0.21",
]

[tool.uv.sources]
simintero-contracts = { workspace = true }
simintero-outbox = { workspace = true }
simintero-tenant-context = { workspace = true }
simintero-authz = { workspace = true }
enstellar-connectors = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enstellar_workflow"]
