# packages/canonical-model/pyproject.toml
[project]
name = "canonical-model"
version = "0.1.0"
description = "Enstellar canonical case model — generated Pydantic v2 types"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26",
    "jinja2>=3.1",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["generated/python"]

[tool.ruff.lint]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generated/python/canonical_model"]

[tool.hatch.build.targets.editable]
packages = ["generated/python/canonical_model"]
