[project]
name = "enstellar-events"
version = "0.1.0"
description = "Enstellar canonical event envelope + topic catalog"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9", "python-dateutil>=2.9"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enstellar_events"]
