[project]
name = "simintero-authz"
version = "1.0.0"
description = "Platform authz: Keycloak JWT (realm simintero) validation + OPA decision client"
requires-python = ">=3.12"
dependencies = ["python-jose[cryptography]>=3.3", "httpx>=0.27", "pydantic>=2.9"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simintero_authz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
