[project]
name = "simintero-tenant-context"
version = "1.0.0"
description = "Platform tenant-context: x-sim-ctx -> TenantContext -> transaction-local RLS GUC"
requires-python = ">=3.12"
dependencies = ["asyncpg>=0.29", "pydantic>=2.9"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "testcontainers[postgres]>=4.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simintero_tenant_context"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
